--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Customer Database</title>
   <script src="customers.js" defer></script>
   <script src="states.js" defer></script>
+  <script src="lib/moment/moment_min.js" defer></script>
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main id="page">
+  <main>
     <h1>Customer Database</h1>
-    <section class="container">
-
+    <section id="page">
     </section>
-
   </main>
-  
 </body>
 </html>
